<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AddExpense"
    android:orientation="vertical"
    android:background="@color/violet">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >


    <LinearLayout
        android:layout_width="380dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/add_expense_form"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginTop="30dp">
            <TextView
                android:textColor="@color/steel_blue"
                android:text="@string/expense_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:id="@+id/expense_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/place"
                android:textColor="@color/steel_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/add_place"
                android:layout_marginTop="8dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/spend1"
                android:textColor="@color/steel_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/add_expense"
                android:inputType="number"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/add_expense_btn"
                android:text="@string/add"
                android:layout_width="120dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="end"
                android:textStyle="bold|normal"
                android:textColor="@color/white_smoke"
                android:layout_marginBottom="15dp"
                android:background="@drawable/add_expense_button"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>



</LinearLayout>